tests/baselines/reference/awaitUsingDeclarations.8.errors.txt
tests/cases/conformance/statements/VariableStatements/usingDeclarations/awaitUsingDeclarations.8.ts(2,17): error TS1155: 'await using' declarations must be initialized.


==== tests/cases/conformance/statements/VariableStatements/usingDeclarations/awaitUsingDeclarations.8.ts (1 errors) ====
    {
        await using a;
                    ~
!!! error TS1155: 'await using' declarations must be initialized.
    }
    
    export {};